TAG: entrezgeneload-tr6519-BP
DATE: 02/25/2013
STAFF: dbm
CHANGES: Branch point tag for TR6519

TAG: entrezgeneload-5-1-1-1
DATE: 01/24/2013
STAFF: sc
CHANGES: TR5169/N2MO project
1) commonBuckets-1.csh -  updated regex when querying for swissprot IDs in
     DP_EntrezGene_Accession. Harold said put this change in production

TAG: entrezgeneload-5-0-0-7
TAG: entrezgeneload-5-0-0-6
DATE: 10/15/2012
STAFF: lec
CHANGES: 
1) TR11195/loadFiles.csh
mim2gene => mim2gene.txt is the correct name of the file
radardbschema-5-0-0-3
pgradardbschema-5-0-0-5
do not created mim2gene.txt from downloaded file; the downloaded data file is no good
use the mim2gene.txt file that exists in the input directory

TAG: entrezgeneload-5-0-0-5
DATE: 10/08/2012
STAFF: lec
CHANGES: 
1) TR11195/loadFiles.csh
mim2gene => mim2gene.txt is the correct name of the file

TAG: entrezgeneload-5-0-0-4
DATE: 09/04/2012
STAFF: sc
CHANGES: loadFiles.csh mim2gene is now called mim2gene.txt (since May 20122)
  so mouse egload hasn't loaded new omim since then

TAG: entrezgeneload-5-0-0-3
TAG: entrezgeneload-5-0-0-2
TAG: entrezgeneload-5-0-0-1
DATE: 06/11/2012, 06/14/2012
STAFF: lec
CHANGES: 
1) TR10994/Postgres Cleanup - Exporter
   DP_EntrezGene_History: remove rows where DB_EntrezGene_Info.geneID does not exist
   DP_HomoloGene: only include taxIDs in mouse, human, rat, etc. list
   any children that do not have parents in DB_EntrezGene_Info

TAG: entrezgeneload-4-4-2-2
DATE: 11/22/2011
STAFF: lec
CHANGES: 
1) added -f to csh/sql

TAG: entrezgeneload-4-4-2-1
DATE: 10/20/2011
STAFF: dbm
CHANGES: 
1) loadAll.csh: Removed lines that grep for errors in the log file - this is
   already being done by the checklog script

TAG: entrezgeneload-4-4-1-1
DATE: 05/03/2011
STAFF: lec
CHANGES: 
1) TR10696/move tempdb tables to statis tables
2) Configuration.default:  added 
   setenv FTPDATA3 /data/downloads/omim

TAG: entrezgeneload-4-3-3-1
DATE: 03/11/2010
STAFF: sc
CHANGES: Merge tr9773 branch to trunk
